@@ -135,8 +135,7 @@ if DOXYGEN
 
 doc/api/html/index.html: doc/doxygen.conf
 	@mkdir -p $(@D)
-	[ "$(srcdir)" = "." ] || sed '/INPUT *=/ s/\([^ ]\+\/\)/$(subst /,\/,$(srcdir))\/\1/g' $(srcdir)/doc/doxygen.conf >doc/doxygen.conf
-	$(DOXYGEN) doc/doxygen.conf
+	$(DOXYGEN) $<
 
 all-local: doc/api/html/index.html
 
