@@ -5,6 +5,7 @@ libmpdclient 2.4 (2010/??/??)
 * connection: add function mpd_connection_get_server_error_location()
 * settings: expose connection settings
 * iso8601, send: format string workarounds for WIN32
+* Makefile.am: fix doxygen in out-of-tree build
 
 
 libmpdclient 2.3 (2010/05/25)
